--- a/IOS/Pentatonic/Base.lproj/Main.storyboard
+++ b/IOS/Pentatonic/Base.lproj/Main.storyboard
@@ -117,29 +117,34 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background.png" translatesAutoresizingMaskIntoConstraints="NO" id="Ban-Wr-skJ">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vcq-Ud-o25">
-                                <rect key="frame" x="330" y="643" width="45" height="22"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="45" id="Hpj-7C-QI3"/>
-                                </constraints>
-                                <state key="normal" title="Back" image="back20.png"/>
-                                <connections>
-                                    <action selector="backAction:" destination="tRj-px-kUi" eventType="touchUpInside" id="z6x-vE-Wyi"/>
-                                </connections>
-                            </button>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" apportionsSegmentWidthsByContent="YES" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="cPA-aF-Z0f">
-                                <rect key="frame" x="2" y="637" width="326" height="29"/>
-                                <segments>
-                                    <segment title="Beginner"/>
-                                    <segment title="Easy"/>
-                                    <segment title="Medium"/>
-                                    <segment title="Hard"/>
-                                    <segment title="Very Hard"/>
-                                </segments>
-                                <connections>
-                                    <action selector="changeDifficultySegment:" destination="tRj-px-kUi" eventType="valueChanged" id="WF2-qD-V04"/>
-                                </connections>
-                            </segmentedControl>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pnp-hs-Msx" userLabel="ST Difficulty">
+                                <rect key="frame" x="0.0" y="627" width="375" height="40"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" apportionsSegmentWidthsByContent="YES" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="cPA-aF-Z0f">
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="41"/>
+                                        <segments>
+                                            <segment title="Beginner"/>
+                                            <segment title="Easy"/>
+                                            <segment title="Medium"/>
+                                            <segment title="Hard"/>
+                                            <segment title="Very Hard"/>
+                                        </segments>
+                                        <connections>
+                                            <action selector="changeDifficultySegment:" destination="tRj-px-kUi" eventType="valueChanged" id="WF2-qD-V04"/>
+                                        </connections>
+                                    </segmentedControl>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vcq-Ud-o25">
+                                        <rect key="frame" x="335" y="0.0" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="Hpj-7C-QI3"/>
+                                        </constraints>
+                                        <state key="normal" title="Back" image="back40.png"/>
+                                        <connections>
+                                            <action selector="backAction:" destination="tRj-px-kUi" eventType="touchUpInside" id="z6x-vE-Wyi"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aES-Tv-mrC">
                                 <rect key="frame" x="0.0" y="20" width="375" height="21"/>
                                 <constraints>
@@ -155,13 +160,13 @@
                                     <constraint firstAttribute="width" secondItem="cDy-Kc-CPb" secondAttribute="height" multiplier="1:1" id="83y-bm-ToZ"/>
                                 </constraints>
                             </imageView>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="-110" maxValue="110" translatesAutoresizingMaskIntoConstraints="NO" id="uvv-DD-Nln">
+                            <slider opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="-110" maxValue="110" translatesAutoresizingMaskIntoConstraints="NO" id="uvv-DD-Nln">
                                 <rect key="frame" x="48" y="607" width="319" height="31"/>
                                 <connections>
                                     <action selector="incrementAction:" destination="tRj-px-kUi" eventType="valueChanged" id="CL8-KL-dxz"/>
                                 </connections>
                             </slider>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K5E-pQ-xaQ">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K5E-pQ-xaQ">
                                 <rect key="frame" x="0.0" y="612" width="40" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="40" id="YXe-Zh-xBj"/>
@@ -170,13 +175,13 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WkH-Ey-Wpf">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WkH-Ey-Wpf">
                                 <rect key="frame" x="0.0" y="576.5" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="-110" maxValue="110" translatesAutoresizingMaskIntoConstraints="NO" id="FVv-TG-zzO">
+                            <slider opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="-110" maxValue="110" translatesAutoresizingMaskIntoConstraints="NO" id="FVv-TG-zzO">
                                 <rect key="frame" x="50" y="572" width="327" height="31"/>
                                 <connections>
                                     <action selector="incrementYAction:" destination="tRj-px-kUi" eventType="valueChanged" id="1E3-Zo-CfI"/>
@@ -188,28 +193,24 @@
                             <constraint firstItem="FVv-TG-zzO" firstAttribute="centerY" secondItem="WkH-Ey-Wpf" secondAttribute="centerY" id="0Kf-yN-YrA"/>
                             <constraint firstItem="Qle-fQ-JiD" firstAttribute="bottom" secondItem="Ban-Wr-skJ" secondAttribute="bottom" id="1tr-20-ega"/>
                             <constraint firstItem="Qle-fQ-JiD" firstAttribute="trailing" secondItem="Ban-Wr-skJ" secondAttribute="trailing" id="26R-5g-dRB"/>
-                            <constraint firstItem="cPA-aF-Z0f" firstAttribute="top" secondItem="uvv-DD-Nln" secondAttribute="bottom" id="5SV-9n-FCh"/>
                             <constraint firstItem="K5E-pQ-xaQ" firstAttribute="leading" secondItem="Qle-fQ-JiD" secondAttribute="leading" id="68Q-Jz-5NC"/>
                             <constraint firstItem="Qle-fQ-JiD" firstAttribute="trailing" secondItem="FVv-TG-zzO" secondAttribute="trailing" id="9s6-oy-lLn"/>
                             <constraint firstItem="uvv-DD-Nln" firstAttribute="leading" secondItem="K5E-pQ-xaQ" secondAttribute="trailing" constant="10" id="9xs-V6-IPG"/>
-                            <constraint firstItem="vcq-Ud-o25" firstAttribute="leading" secondItem="cPA-aF-Z0f" secondAttribute="trailing" constant="2" id="ERK-5w-d4v"/>
-                            <constraint firstAttribute="bottom" secondItem="vcq-Ud-o25" secondAttribute="bottom" constant="2" id="HDJ-IR-wE9"/>
-                            <constraint firstItem="cPA-aF-Z0f" firstAttribute="leading" secondItem="Qle-fQ-JiD" secondAttribute="leading" constant="2" id="Nac-2F-ngE"/>
                             <constraint firstItem="cDy-Kc-CPb" firstAttribute="leading" secondItem="Qle-fQ-JiD" secondAttribute="leading" constant="10" id="QbN-kI-6TK"/>
                             <constraint firstItem="FVv-TG-zzO" firstAttribute="leading" secondItem="WkH-Ey-Wpf" secondAttribute="trailing" constant="10" id="SHp-Tu-hAm"/>
                             <constraint firstItem="aES-Tv-mrC" firstAttribute="leading" secondItem="Qle-fQ-JiD" secondAttribute="leading" id="Sdu-w3-gPE"/>
                             <constraint firstItem="Qle-fQ-JiD" firstAttribute="trailing" secondItem="cDy-Kc-CPb" secondAttribute="trailing" constant="10" id="UjC-5u-O8l"/>
                             <constraint firstItem="Qle-fQ-JiD" firstAttribute="trailing" secondItem="uvv-DD-Nln" secondAttribute="trailing" constant="10" id="VMw-82-E2J"/>
                             <constraint firstItem="K5E-pQ-xaQ" firstAttribute="centerY" secondItem="uvv-DD-Nln" secondAttribute="centerY" id="XUT-vO-poN"/>
+                            <constraint firstItem="Qle-fQ-JiD" firstAttribute="trailing" secondItem="pnp-hs-Msx" secondAttribute="trailing" id="Y0l-jl-V8K"/>
+                            <constraint firstAttribute="bottom" secondItem="pnp-hs-Msx" secondAttribute="bottom" id="aDp-nv-tZI"/>
                             <constraint firstItem="uvv-DD-Nln" firstAttribute="top" secondItem="FVv-TG-zzO" secondAttribute="bottom" constant="5" id="aZM-3K-G8A"/>
-                            <constraint firstAttribute="trailing" secondItem="vcq-Ud-o25" secondAttribute="trailing" id="daA-q4-r0E"/>
                             <constraint firstItem="Ban-Wr-skJ" firstAttribute="leading" secondItem="Qle-fQ-JiD" secondAttribute="leading" id="gss-pb-08e"/>
                             <constraint firstItem="aES-Tv-mrC" firstAttribute="top" secondItem="Qle-fQ-JiD" secondAttribute="top" id="kj9-Q5-GBr"/>
                             <constraint firstItem="uvv-DD-Nln" firstAttribute="leading" secondItem="K5E-pQ-xaQ" secondAttribute="trailing" constant="10" id="lOx-2t-tPW"/>
-                            <constraint firstItem="cPA-aF-Z0f" firstAttribute="top" secondItem="uvv-DD-Nln" secondAttribute="bottom" id="nIs-fz-MFa"/>
+                            <constraint firstItem="pnp-hs-Msx" firstAttribute="leading" secondItem="Qle-fQ-JiD" secondAttribute="leading" id="mve-SK-CUd"/>
                             <constraint firstItem="cDy-Kc-CPb" firstAttribute="top" secondItem="aES-Tv-mrC" secondAttribute="bottom" constant="10" id="nvX-sv-ksT"/>
                             <constraint firstItem="Qle-fQ-JiD" firstAttribute="trailing" secondItem="aES-Tv-mrC" secondAttribute="trailing" id="rcd-Qm-VCs"/>
-                            <constraint firstItem="Qle-fQ-JiD" firstAttribute="bottom" secondItem="cPA-aF-Z0f" secondAttribute="bottom" constant="2" id="rgS-2h-YSQ"/>
                             <constraint firstItem="WkH-Ey-Wpf" firstAttribute="leading" secondItem="Qle-fQ-JiD" secondAttribute="leading" id="sQh-f8-iAV"/>
                             <constraint firstItem="Ban-Wr-skJ" firstAttribute="top" secondItem="Qle-fQ-JiD" secondAttribute="top" id="tJg-nH-Hyc"/>
                         </constraints>
@@ -478,7 +479,7 @@
         <image name="Play.png" width="256" height="256"/>
         <image name="Rules.png" width="136" height="125"/>
         <image name="Tutorial.png" width="550" height="250"/>
-        <image name="back20.png" width="20" height="20"/>
+        <image name="back40.png" width="40" height="40"/>
         <image name="background.png" width="183" height="275"/>
         <image name="rect_jaune.png" width="520" height="527"/>
         <image name="setting.png" width="482" height="485"/>
