--- a/IOS/Pentatonic/Base.lproj/Main.storyboard
+++ b/IOS/Pentatonic/Base.lproj/Main.storyboard
@@ -7,6 +7,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -187,6 +188,9 @@
                                     <action selector="incrementYAction:" destination="tRj-px-kUi" eventType="valueChanged" id="1E3-Zo-CfI"/>
                                 </connections>
                             </slider>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Wrj-0z-SJt">
+                                <rect key="frame" x="16" y="575" width="343" height="2"/>
+                            </progressView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -196,6 +200,7 @@
                             <constraint firstItem="K5E-pQ-xaQ" firstAttribute="leading" secondItem="Qle-fQ-JiD" secondAttribute="leading" id="68Q-Jz-5NC"/>
                             <constraint firstItem="Qle-fQ-JiD" firstAttribute="trailing" secondItem="FVv-TG-zzO" secondAttribute="trailing" id="9s6-oy-lLn"/>
                             <constraint firstItem="uvv-DD-Nln" firstAttribute="leading" secondItem="K5E-pQ-xaQ" secondAttribute="trailing" constant="10" id="9xs-V6-IPG"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Wrj-0z-SJt" secondAttribute="trailing" id="CsR-Rc-HMR"/>
                             <constraint firstItem="cDy-Kc-CPb" firstAttribute="leading" secondItem="Qle-fQ-JiD" secondAttribute="leading" constant="10" id="QbN-kI-6TK"/>
                             <constraint firstItem="FVv-TG-zzO" firstAttribute="leading" secondItem="WkH-Ey-Wpf" secondAttribute="trailing" constant="10" id="SHp-Tu-hAm"/>
                             <constraint firstItem="aES-Tv-mrC" firstAttribute="leading" secondItem="Qle-fQ-JiD" secondAttribute="leading" id="Sdu-w3-gPE"/>
@@ -210,6 +215,8 @@
                             <constraint firstItem="uvv-DD-Nln" firstAttribute="leading" secondItem="K5E-pQ-xaQ" secondAttribute="trailing" constant="10" id="lOx-2t-tPW"/>
                             <constraint firstItem="pnp-hs-Msx" firstAttribute="leading" secondItem="Qle-fQ-JiD" secondAttribute="leading" id="mve-SK-CUd"/>
                             <constraint firstItem="cDy-Kc-CPb" firstAttribute="top" secondItem="aES-Tv-mrC" secondAttribute="bottom" constant="10" id="nvX-sv-ksT"/>
+                            <constraint firstItem="Wrj-0z-SJt" firstAttribute="leading" secondItem="nHu-pQ-gJc" secondAttribute="leadingMargin" id="ohB-J9-xKV"/>
+                            <constraint firstItem="Wrj-0z-SJt" firstAttribute="bottom" secondItem="pnp-hs-Msx" secondAttribute="top" constant="-50" id="pVr-FO-y6c"/>
                             <constraint firstItem="Qle-fQ-JiD" firstAttribute="trailing" secondItem="aES-Tv-mrC" secondAttribute="trailing" id="rcd-Qm-VCs"/>
                             <constraint firstItem="WkH-Ey-Wpf" firstAttribute="leading" secondItem="Qle-fQ-JiD" secondAttribute="leading" id="sQh-f8-iAV"/>
                             <constraint firstItem="Ban-Wr-skJ" firstAttribute="top" secondItem="Qle-fQ-JiD" secondAttribute="top" id="tJg-nH-Hyc"/>
@@ -223,6 +230,7 @@
                         <outlet property="labelCurrentLevel" destination="aES-Tv-mrC" id="3jx-4A-U4e"/>
                         <outlet property="labelIncrement" destination="K5E-pQ-xaQ" id="KxI-F1-GnR"/>
                         <outlet property="labelYIncrement" destination="WkH-Ey-Wpf" id="BcU-bJ-o6i"/>
+                        <outlet property="progressBar" destination="Wrj-0z-SJt" id="hTS-1p-Uuy"/>
                         <outlet property="sliderIncrement" destination="uvv-DD-Nln" id="htE-yz-3hq"/>
                         <outlet property="sliderYIncrement" destination="FVv-TG-zzO" id="gCL-0B-IfM"/>
                     </connections>
@@ -290,7 +298,7 @@
                                     <segment title="Green"/>
                                     <segment title="Custom"/>
                                 </segments>
-                                <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <action selector="themeSegmentAction:" destination="G5O-PZ-Blk" eventType="valueChanged" id="TVq-5L-F4i"/>
                                 </connections>
